--- a/CaseStudies/MedicareProcedures/MedicareProcedures.Rmd
+++ b/CaseStudies/MedicareProcedures/MedicareProcedures.Rmd
@@ -11,6 +11,10 @@ The Centers for Medicare and Medicaid Services (CMS) make available data (as of 
 
 There are 9 million rows that cover a wide range of services.  Some treatments were omitted, particularly when the patient numbers were so low that confidentiality might be at issue.
 
+## To Do List
+
+1. Go through the `clean_credentials.csv` file to check and fill in the rest of the categories.
+
 ## Outpatient numbers by Hospital no procedures listed
 
 A smaller file (20,000 some rows) about how much each hospital was reimbursed.
@@ -41,6 +45,17 @@ names(providers) <- c('npi','credential','gender','entity_code','city','zip','st
 
 Will need to sort out the credentials.  There are too many different types. There are variations in spelling and mistakes.  Narrow it down to 10 or so levels.
 
+```{r}
+creds <- read.csv('clean_credentials.csv')
+people <- join( providers, creds )
+people <- mutate(people, credential=cleaned_credential)
+providers_raw <- providers
+providers <- people[,1:9]
+pcreds <- as.character(providers$credential)
+pcreds[pcreds==''] <- 'Other'
+providers$credential <- factor(pcreds)
+```
+
 ### Procedures
 
 ```{r}
@@ -55,14 +70,30 @@ occasions <- orig[,c(1,16,17,19:27)]
 names(occasions) <- c('npi','place','hcpcs_code','total_count','patient_count','patient_days','allowed_average','allowed_std','submitted_average','submitted_std','payment_average','payment_std')
 ```
 
+## Backstory
+
+### Clean up the credentials
+
+There are too many varieties of credentials.  Clean them up.
+```{r}
+quals <- tally(group_by(providers,credential))
+write.csv(quals, file='clean_credentials.csv',row.names=FALSE)
+```
+
 ### Save as CSV and R object
 
 ```{r}
-write.csv(providers,'providers.csv',row.names=FALSE)
-write.csv(procedures,'procedures.csv',row.names=FALSE)
-write.csv(occasions,'occasions.csv',row.names=FALSE)
-save(providers, procedures, occasions, file='MedicareBilling.rda')
+# write.csv(providers,'providers.csv',row.names=FALSE)
+# write.csv(procedures,'procedures.csv',row.names=FALSE)
+# write.csv(occasions,'occasions.csv',row.names=FALSE)
+save(providers, procedures, occasions,
+     clean_credentials, 
+     providers_raw,
+     file='MedicareBilling.rda')
 ```
+
+
+
 
 
 Get all the records: Read in each batch of 1,000,000 files and process them separately to create
