Started on "Kinds of Data"
More on case studies.

Putting the DCF-devel package in the repo.  This can be installed with install_github("dtkaplan/DCF-2014/DCF-devel")

--- a/CaseStudies/BirdAirplaneStrikes/working_notes.Rmd
+++ b/CaseStudies/BirdAirplaneStrikes/working_notes.Rmd
@@ -7,6 +7,7 @@ output: html_document
 
 [FAA data site](http://wildlife.faa.gov/database.aspx).  You can do one airport at a time.
 
+A [blog entry](http://genedan.com/tag/faa-strike-wildlife-strike-database/) on these data and `ggplot`
 ```{r include=FALSE}
 # Can't read the .xls files with this package.  So, they have been
 # resaved as CSV files
